--- a/src/styles.less
+++ b/src/styles.less
@@ -940,6 +940,18 @@ nz-page-header {
   height: auto !important;
 }
 
+// .app-loader {
+//   border: 8px solid #fff;
+//   /* Light grey */
+//   border-top: 8px solid #3B3B98;
+//   /* Blue */
+//   border-radius: 50%;
+//   width: 120px;
+//   height: 120px;
+//   animation: spin 0.8s linear infinite;
+// }
+
+
 // .ant-input-affix-wrapper {
 //     border-color: #00000025;
 //     border-width: 2px !important;
