--- a/src/app/pages/user-management/user/user-list/user-list.component.html
+++ b/src/app/pages/user-management/user/user-list/user-list.component.html
@@ -15,7 +15,7 @@
     <form nz-form nzLayout="vertical" [formGroup]="form" (ngSubmit)="submitForm()">
 
       <div nz-row [nzGutter]="16">
-        <div nz-col nzXs="12">
+        <div nz-col nzXs="12" nzMd="6" nzLg="3" nzXl="6">
           <nz-form-item>
             <nz-form-label>Status</nz-form-label>
             <nz-form-control>
@@ -28,7 +28,7 @@
           </nz-form-item>
         </div>
 
-        <div nz-col nzXs="12">
+        <div nz-col nzXs="12" nzMd="6" nzLg="3" nzXl="6">
           <nz-form-item>
             <nz-form-label>Search</nz-form-label>
             <nz-form-control nzErrorTip="Please input your username!">
